--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
-    "@prisma/client": "3.9.2",
+    "graphql": "^16.6.0",
     "moment": "^2.29.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
@@ -49,11 +49,10 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^27.2.5",
-    "prettier": "^2.3.2",
-    "prisma": "^3.9.2",
+    "prettier": "^2.8.8",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
