--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.7.4",
+    "@nestjs/apollo": "^12.0.1",
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^12.0.1",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "graphql": "^16.6.0",
     "moment": "^2.29.1",
