--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "graphql": "^16.6.0",
+    "graphql-type-json": "^0.3.2",
     "moment": "^2.29.1",
     "nestjs-pino": "^3.3.0",
     "passport": "^0.6.0",
